--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 NODE_PATH=.
-# NEXT_PUBLIC_API_URL=http://localhost:8000
-NEXT_PUBLIC_API_URL=https://decore-server.herokuapp.com
+NEXT_PUBLIC_API_URL=http://localhost:8000
+# NEXT_PUBLIC_API_URL=https://decore-server.herokuapp.com
