--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^8.2.0",
     "sass": "^1.52.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "whatsapp-react-component": "^1.0.4"
   },
   "devDependencies": {
     "eslint": "8.11.0",
